agent-grounding/prod-opportunity-stages/objects/Opportunity/Opportunity.object-meta.xml
<CustomObject>
    <sharingModel>Read</sharingModel>
</CustomObject>