agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/Account_ALM_Service_Level__c.field-meta.xml
<CustomField>
    <fullName>Account_ALM_Service_Level__c</fullName>
    <formula>TEXT( Account.Ultimate_Account__r.ALM_Service_Level__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account ALM Service Level</label>
    <type>Text</type>
</CustomField>