agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/Account_Alternative_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Alternative_Name__c</fullName>
    <description>Recycled field from account alternative name</description>
    <formula>Invoice_Contact__r.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Contact&apos;s Account</label>
    <type>Text</type>
</CustomField>