agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/Account_Country__c.field-meta.xml
<CustomField>
    <fullName>Account_Country__c</fullName>
    <description>Billing Country on the Account Record</description>
    <formula>Account.BillingCountry</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Country</label>
    <type>Text</type>
</CustomField>