agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/Account_Debtor_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Debtor_Status__c</fullName>
    <formula>TEXT(Account.Debtor_Status__c)</formula>
    <label>Account Debtor Status</label>
    <type>Text</type>
</CustomField>