agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/Account_E_I_Service_Level__c.field-meta.xml
<CustomField>
    <fullName>Account_E_I_Service_Level__c</fullName>
    <formula>TEXT( Account.Ultimate_Account__r.E_I_Service_Level__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account E &amp; I Service Level</label>
    <type>Text</type>
</CustomField>