agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/Account_Segmentation__c.field-meta.xml
<CustomField>
    <fullName>Account_Segmentation__c</fullName>
    <formula>Text(Account.Model_Segmentation__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ALM Account Segmentation</label>
    <type>Text</type>
</CustomField>