agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/Account_SPG_Lexology_PRO_service_level__c.field-meta.xml
<CustomField>
    <fullName>Account_SPG_Lexology_PRO_service_level__c</fullName>
    <formula>TEXT( Account.Ultimate_Account__r.SPG_Lexology_PRO_Service_Level__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account SPG Lexology PRO service level</label>
    <type>Text</type>
</CustomField>