agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/Account_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Status__c</fullName>
    <formula>TEXT(Account.Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ALM Account Status</label>
    <type>Text</type>
</CustomField>