agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/Account_tier__c.field-meta.xml
<CustomField>
    <fullName>Account_tier__c</fullName>
    <formula>TEXT( Account.Ultimate_Account__r.Account_tier__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account tier</label>
    <type>Text</type>
</CustomField>