agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/Advertising_Total_Sale_Value__c.field-meta.xml
<CustomField>
    <fullName>Advertising_Total_Sale_Value__c</fullName>
    <description>This field captures the total opportunity line item value for Advertising.</description>
    <inlineHelpText>This field captures the total opportunity line item value for Advertising.</inlineHelpText>
    <label>Advertising Total Sale Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>