agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/AllHires_Total_Sale_Value__c.field-meta.xml
<CustomField>
    <fullName>AllHires_Total_Sale_Value__c</fullName>
    <description>This field captures the total opportunity line item value for AllHires.</description>
    <inlineHelpText>This field captures the total opportunity line item value for AllHires.</inlineHelpText>
    <label>AllHires Total Sale Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>