agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/ALM_Auto_Renew__c.field-meta.xml
<CustomField>
    <fullName>ALM_Auto_Renew__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ALM Auto Renew</label>
    <type>Checkbox</type>
</CustomField>