agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/ALM_Billing_entity_ID__c.field-meta.xml
<CustomField>
    <fullName>ALM_Billing_entity_ID__c</fullName>
    <label>ALM Billing entity ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>