agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/ALM_Buyer_Country__c.field-meta.xml
<CustomField>
    <fullName>ALM_Buyer_Country__c</fullName>
    <label>ALM Buyer Country</label>
    <length>200</length>
    <type>Text</type>
</CustomField>