agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/ALM_CSM__c.field-meta.xml
<CustomField>
    <fullName>ALM_CSM__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ALM CSM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities5</relationshipName>
    <type>Lookup</type>
</CustomField>