agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/ALM_Event_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>ALM_Event_Opportunity__c</fullName>
    <formula>SBQQ__PrimaryQuote__r.ALM_Event_Product__c &gt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ALM Event Opportunity</label>
    <type>Checkbox</type>
</CustomField>