agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/ALM_Individual_Sub__c.field-meta.xml
<CustomField>
    <fullName>ALM_Individual_Sub__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ALM Individual Sub</label>
    <type>Checkbox</type>
</CustomField>