agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/ALM_Integra_Renewal__c.field-meta.xml
<CustomField>
    <fullName>ALM_Integra_Renewal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ALM Integra Renewal</label>
    <type>Checkbox</type>
</CustomField>