agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/ALM_Legal_Entity__c.field-meta.xml
<CustomField>
    <fullName>ALM_Legal_Entity__c</fullName>
    <label>ALM Legal Entity</label>
    <length>80</length>
    <type>Text</type>
</CustomField>