agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/ALM_Lost_Reason__c.field-meta.xml
<CustomField>
    <fullName>ALM_Lost_Reason__c</fullName>
    <label>ALM Lost Reason</label>
    <length>50</length>
    <type>Text</type>
</CustomField>