agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/ALM_Media_Campaign_ID__c.field-meta.xml
<CustomField>
    <fullName>ALM_Media_Campaign_ID__c</fullName>
    <label>ALM Media Campaign ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>