agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/ALM_Net_Price__c.field-meta.xml
<CustomField>
    <fullName>ALM_Net_Price__c</fullName>
    <label>ALM Net Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>