agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/ALM_New_Customer_Type__c.field-meta.xml
<CustomField>
    <fullName>ALM_New_Customer_Type__c</fullName>
    <label>ALM New Customer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Enterprise</fullName>
            </value>
            <value>
                <fullName>Individual</fullName>
            </value>
            <value>
                <fullName>Site Licence</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>