agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/ALM_Opportunity_Id__c.field-meta.xml
<CustomField>
    <fullName>ALM_Opportunity_Id__c</fullName>
    <description>ALM&apos;s Opportunity Id</description>
    <inlineHelpText>ALM&apos;s Opportunity Id</inlineHelpText>
    <label>ALM Opportunity Id</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>