agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/ALM_Owner_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>ALM_Owner_Business_Unit__c</fullName>
    <label>ALM Owner Business Unit</label>
    <length>80</length>
    <type>Text</type>
</CustomField>