agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/ALM_Rate_Card__c.field-meta.xml
<CustomField>
    <fullName>ALM_Rate_Card__c</fullName>
    <label>ALM Rate Card</label>
    <length>50</length>
    <type>Text</type>
</CustomField>