agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/ALM_Ship_to_Contact__c.field-meta.xml
<CustomField>
    <fullName>ALM_Ship_to_Contact__c</fullName>
    <label>ALM Ship to Contact</label>
    <length>200</length>
    <type>Text</type>
</CustomField>