agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/ALM_Special_Invoice_Handling_Notes__c.field-meta.xml
<CustomField>
    <fullName>ALM_Special_Invoice_Handling_Notes__c</fullName>
    <label>ALM Special Invoice Handling Notes</label>
    <length>50000</length>
    <type>Html</type>
</CustomField>