agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/ALM_Total_Discount__c.field-meta.xml
<CustomField>
    <fullName>ALM_Total_Discount__c</fullName>
    <label>ALM Total Discount %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>