agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/ALMAccount_Description__c.field-meta.xml
<CustomField>
    <fullName>ALMAccount_Description__c</fullName>
    <description>|Advendio. GL_Code</description>
    <label>ALM Account Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>