agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/ALMAccounting_Date__c.field-meta.xml
<CustomField>
    <fullName>ALMAccounting_Date__c</fullName>
    <description>|Advendio. Invoice</description>
    <label>ALM Accounting Date</label>
    <type>Date</type>
</CustomField>