agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/ALMAccountNumber__c.field-meta.xml
<CustomField>
    <fullName>ALMAccountNumber__c</fullName>
    <description>|Advendio. Invoice</description>
    <label>ALM AccountNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>