agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/ALMAdbase_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>ALMAdbase_Order_Number__c</fullName>
    <description>|Advendio. MediaCampaign</description>
    <label>ALM Adbase Order Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>