agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/ALMAdvertiserBillingCity__c.field-meta.xml
<CustomField>
    <fullName>ALMAdvertiserBillingCity__c</fullName>
    <description>|Advendio. Invoice</description>
    <label>ALM Advertiser Billing City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>