agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/ALMAdvertiserBillingCountry__c.field-meta.xml
<CustomField>
    <fullName>ALMAdvertiserBillingCountry__c</fullName>
    <description>|Advendio. Invoice</description>
    <label>ALM Advertiser Billing Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>