agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/ALMAdvertiserBillingPostalCode__c.field-meta.xml
<CustomField>
    <fullName>ALMAdvertiserBillingPostalCode__c</fullName>
    <description>|Advendio. Invoice</description>
    <label>ALM Advertiser Billing Postal Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>