agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/ALMAdvertiserBillingState__c.field-meta.xml
<CustomField>
    <fullName>ALMAdvertiserBillingState__c</fullName>
    <description>|Advendio. Invoice</description>
    <label>ALM Advertiser Billing State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>