agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/ALMAdvertiserBillingStreets__c.field-meta.xml
<CustomField>
    <fullName>ALMAdvertiserBillingStreets__c</fullName>
    <description>|Advendio. Invoice</description>
    <label>ALM Advertiser Billing Streets</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>