agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/ALMAdvertiserDebitorId__c.field-meta.xml
<CustomField>
    <fullName>ALMAdvertiserDebitorId__c</fullName>
    <description>|Advendio. Invoice</description>
    <label>ALM Advertiser Debtor Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>