agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/ALMAdvertiserName__c.field-meta.xml
<CustomField>
    <fullName>ALMAdvertiserName__c</fullName>
    <description>|Advendio. Invoice</description>
    <label>ALM Advertiser Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>