agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/ALMAgency__c.field-meta.xml
<CustomField>
    <fullName>ALMAgency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Enter Agency to whom the media campaign should be assigned.|Advendio. MediaCampaign</description>
    <label>ALM Agency</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>ALM Agency</relationshipLabel>
    <relationshipName>ALM_Agency</relationshipName>
    <type>Lookup</type>
</CustomField>