agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/ALMAgencyDebitorId__c.field-meta.xml
<CustomField>
    <fullName>ALMAgencyDebitorId__c</fullName>
    <description>|Advendio. Invoice</description>
    <label>ALM Agency Debtor Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>