agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/ALMAgencyId__c.field-meta.xml
<CustomField>
    <fullName>ALMAgencyId__c</fullName>
    <description>Internal Id for the referenced Agency|Advendio. Invoice</description>
    <label>ALM Agency Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>