agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/ALMAgencyName__c.field-meta.xml
<CustomField>
    <fullName>ALMAgencyName__c</fullName>
    <description>|Advendio. Invoice</description>
    <label>ALM Agency Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>