agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/ALMAmount_net3__c.field-meta.xml
<CustomField>
    <fullName>ALMAmount_net3__c</fullName>
    <description>This revenue is the agency net value (N2) minus third party comission.|Advendio. MediaCampaign</description>
    <label>ALM Amount net3</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>