agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/ALMAmount_net3APEX__c.field-meta.xml
<CustomField>
    <fullName>ALMAmount_net3APEX__c</fullName>
    <description>|Advendio. Campaign_Item</description>
    <label>ALM Amount net3 (apex)</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>