agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/ALMAmount_net_net__c.field-meta.xml
<CustomField>
    <fullName>ALMAmount_net_net__c</fullName>
    <description>This revenue is the customer net value (N1) minus agency comission.|Advendio. MediaCampaign</description>
    <label>ALM Amount net/net</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>