agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/ALMBalance_Remaining__c.field-meta.xml
<CustomField>
    <fullName>ALMBalance_Remaining__c</fullName>
    <description>|Advendio. Pre_Payment</description>
    <label>ALM Balance Remaining</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>