agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/ALMBillingStatus__c.field-meta.xml
<CustomField>
    <fullName>ALMBillingStatus__c</fullName>
    <description>In this field you can see the aggregated Billing Status of all Campaign Items for this Media Campaign.|Advendio. MediaCampaign</description>
    <label>ALM Billing Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>