agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/ALMBillMe__c.field-meta.xml
<CustomField>
    <fullName>ALMBillMe__c</fullName>
    <defaultValue>false</defaultValue>
    <description>|Advendio. MediaCampaign</description>
    <label>ALM Bill me</label>
    <type>Checkbox</type>
</CustomField>