agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/ALMBusinessType__c.field-meta.xml
<CustomField>
    <fullName>ALMBusinessType__c</fullName>
    <description>Please choose the relevant value for this Media Campaign. This field is used for reporting and interfaces to Accounting Solutions.|Advendio. MediaCampaign</description>
    <label>ALM Business Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>