agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/ALMCampaign_Offer_Number__c.field-meta.xml
<CustomField>
    <fullName>ALMCampaign_Offer_Number__c</fullName>
    <description>|Advendio. Revenue_Schedule</description>
    <label>ALM Campaign Offer Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>