agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/ALMCommission_Rep__c.field-meta.xml
<CustomField>
    <fullName>ALMCommission_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>|Advendio. Commission_Split</description>
    <label>ALM Commission Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>ALM Commission Rep</relationshipLabel>
    <relationshipName>ALM_Commission_Rep</relationshipName>
    <type>Lookup</type>
</CustomField>