agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/ALMCreated_Flexible_Payment_Plan_Before__c.field-meta.xml
<CustomField>
    <fullName>ALMCreated_Flexible_Payment_Plan_Before__c</fullName>
    <defaultValue>false</defaultValue>
    <description>|Advendio. MediaCampaign</description>
    <label>ALM Created Flexible Payment Plan Before</label>
    <type>Checkbox</type>
</CustomField>