agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/ALMCustom_Email_Body__c.field-meta.xml
<CustomField>
    <fullName>ALMCustom_Email_Body__c</fullName>
    <description>|Advendio. Right_Signature_Envelope</description>
    <label>ALM Custom Email Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>