agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/ALMDate__c.field-meta.xml
<CustomField>
    <fullName>ALMDate__c</fullName>
    <description>Shows the date of the payment.|Advendio. Payment</description>
    <label>ALM Date</label>
    <type>Date</type>
</CustomField>