agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/ALMDebtor__c.field-meta.xml
<CustomField>
    <fullName>ALMDebtor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>|Advendio. Invoice</description>
    <label>ALM Debtor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>ALM Debtor</relationshipLabel>
    <relationshipName>ALM_Debtor</relationshipName>
    <type>Lookup</type>
</CustomField>