agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/ALMDeltaAmountN3__c.field-meta.xml
<CustomField>
    <fullName>ALMDeltaAmountN3__c</fullName>
    <description>Shows the difference between the original Media Campaign Delta Amount (N3) and optimized Delta Amount (N3).|Advendio. OptimizingVersion</description>
    <label>ALM Delta Amount (N3)</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>