agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/ALMDispatch__c.field-meta.xml
<CustomField>
    <fullName>ALMDispatch__c</fullName>
    <description>|Advendio. MediaCampaign</description>
    <label>ALM Dispatch</label>
    <length>255</length>
    <type>Text</type>
</CustomField>