agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/ALMError_Message__c.field-meta.xml
<CustomField>
    <fullName>ALMError_Message__c</fullName>
    <description>|Advendio. Right_Signature_Envelope</description>
    <label>ALM Error Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>