agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/ALMGateway_ID__c.field-meta.xml
<CustomField>
    <fullName>ALMGateway_ID__c</fullName>
    <description>|Advendio. Transaction</description>
    <label>ALM Gateway ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>