agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/ALMGateway_Name__c.field-meta.xml
<CustomField>
    <fullName>ALMGateway_Name__c</fullName>
    <description>|Advendio. Gateway</description>
    <label>ALM Gateway Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>