agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/ALMHistoric_Order_Id__c.field-meta.xml
<CustomField>
    <fullName>ALMHistoric_Order_Id__c</fullName>
    <description>|Advendio. MediaCampaign</description>
    <label>ALM Historic Order Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>