agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/ALMHistoric_Payment_Id__c.field-meta.xml
<CustomField>
    <fullName>ALMHistoric_Payment_Id__c</fullName>
    <description>|Advendio. Pre_Payment</description>
    <label>ALM Historic Payment Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>