agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/ALMHistoric_Sales_Rep__c.field-meta.xml
<CustomField>
    <fullName>ALMHistoric_Sales_Rep__c</fullName>
    <description>|Advendio. MediaCampaign</description>
    <label>ALM Historic Sales Rep</label>
    <length>255</length>
    <type>Text</type>
</CustomField>