agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/ALMId__c.field-meta.xml
<CustomField>
    <fullName>ALMId__c</fullName>
    <description>|Advendio. Ad_price</description>
    <label>ALM Record ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>