agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/ALMInvoice__c.field-meta.xml
<CustomField>
    <fullName>ALMInvoice__c</fullName>
    <description>|Advendio. Invoice</description>
    <label>ALM Invoice</label>
    <length>255</length>
    <type>Text</type>
</CustomField>