agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/ALMInvoice_Amount_Weighted__c.field-meta.xml
<CustomField>
    <fullName>ALMInvoice_Amount_Weighted__c</fullName>
    <description>|Advendio. Commission_Split</description>
    <label>ALM Invoice Amount (Weighted)</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>