agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/ALMInvoiceAmountN3__c.field-meta.xml
<CustomField>
    <fullName>ALMInvoiceAmountN3__c</fullName>
    <description>|Advendio. Revenue_Schedule</description>
    <label>ALM Invoice Amount (N3)</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>