agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/ALMInvoiced__c.field-meta.xml
<CustomField>
    <fullName>ALMInvoiced__c</fullName>
    <defaultValue>false</defaultValue>
    <description>stamped when an invoice for a media campaign is created|Advendio. MediaCampaign</description>
    <label>ALM Invoiced</label>
    <type>Checkbox</type>
</CustomField>