agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/ALMInvoicedAmountNet3__c.field-meta.xml
<CustomField>
    <fullName>ALMInvoicedAmountNet3__c</fullName>
    <description>|Advendio. InvoiceItem</description>
    <label>ALM Invoiced Amount N3</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>