agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/ALMInvoicedAmountVatType2__c.field-meta.xml
<CustomField>
    <fullName>ALMInvoicedAmountVatType2__c</fullName>
    <description>This formula calculates the sum of all items of type 2 and adds the VAT.|Advendio. MediaCampaign</description>
    <label>ALM Invoiced Amount Gross (VAT Type 2)</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>