agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/ALMInvoiceDate__c.field-meta.xml
<CustomField>
    <fullName>ALMInvoiceDate__c</fullName>
    <description>|Advendio. Invoice</description>
    <label>ALM Invoice Date</label>
    <type>Date</type>
</CustomField>