agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/ALMInvoicedQuantity__c.field-meta.xml
<CustomField>
    <fullName>ALMInvoicedQuantity__c</fullName>
    <description>|Advendio. InvoiceItem</description>
    <label>ALM InvoicedQuantity</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>