agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/ALMIsTouchpointMarkets__c.field-meta.xml
<CustomField>
    <fullName>ALMIsTouchpointMarkets__c</fullName>
    <defaultValue>false</defaultValue>
    <description>|Advendio. MediaCampaign</description>
    <label>ALM IsTouchpointMarkets</label>
    <type>Checkbox</type>
</CustomField>