agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/ALMLastActivityDate__c.field-meta.xml
<CustomField>
    <fullName>ALMLastActivityDate__c</fullName>
    <description>|Advendio. Pre_Payment</description>
    <label>ALM Last Activity Date</label>
    <type>Date</type>
</CustomField>