agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/ALMNonTaxableAmountTotal__c.field-meta.xml
<CustomField>
    <fullName>ALMNonTaxableAmountTotal__c</fullName>
    <description>Displays the total amount of all campaign items sold which are nontaxable or have a tax exempt.|Advendio. MediaCampaign</description>
    <label>ALM Nontaxable Amount (VAT Total)</label>
    <precision>10</precision>
    <scale>9</scale>
    <type>Currency</type>
</CustomField>