agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/ALMNotes__c.field-meta.xml
<CustomField>
    <fullName>ALMNotes__c</fullName>
    <description>|Advendio. Pre_Payment</description>
    <label>ALM Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>