agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/ALMOffer_Number__c.field-meta.xml
<CustomField>
    <fullName>ALMOffer_Number__c</fullName>
    <description>The proposal number is generated automatically by the system in ascending order for each media campaign.|Advendio. MediaCampaign</description>
    <label>ALM Offer Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>