agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/ALMOrderID__c.field-meta.xml
<CustomField>
    <fullName>ALMOrderID__c</fullName>
    <description>|Advendio. ChargentOrder</description>
    <label>ALM Order ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>