agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/ALMOwner__c.field-meta.xml
<CustomField>
    <fullName>ALMOwner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>|Advendio. Invoice</description>
    <label>ALM Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>ALM Owner</relationshipLabel>
    <relationshipName>ALM_Owner</relationshipName>
    <type>Lookup</type>
</CustomField>