agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/ALMPayment_Date__c.field-meta.xml
<CustomField>
    <fullName>ALMPayment_Date__c</fullName>
    <description>|Advendio. Pre_Payment</description>
    <label>ALM Payment Date</label>
    <type>Date</type>
</CustomField>