agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/ALMPayment_Method__c.field-meta.xml
<CustomField>
    <fullName>ALMPayment_Method__c</fullName>
    <description>|Advendio. Payment</description>
    <label>ALM Payment Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>