agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/ALMPayment_Number__c.field-meta.xml
<CustomField>
    <fullName>ALMPayment_Number__c</fullName>
    <description>|Advendio. Pre_Payment</description>
    <label>ALM Payment Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>