agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/ALMPayment_Type__c.field-meta.xml
<CustomField>
    <fullName>ALMPayment_Type__c</fullName>
    <description>|Advendio. Pre_Payment</description>
    <label>ALM Payment Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>