agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/ALMPaymentNo__c.field-meta.xml
<CustomField>
    <fullName>ALMPaymentNo__c</fullName>
    <description>|Advendio. Payment</description>
    <label>ALM Payment No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>