agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/ALMPercent__c.field-meta.xml
<CustomField>
    <fullName>ALMPercent__c</fullName>
    <description>|Advendio. Commission_Split</description>
    <label>ALM Percent</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>