agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/ALMRecipientId__c.field-meta.xml
<CustomField>
    <fullName>ALMRecipientId__c</fullName>
    <description>|Advendio. Invoice</description>
    <label>ALM Debtor Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>