agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/ALMRevenue_Type__c.field-meta.xml
<CustomField>
    <fullName>ALMRevenue_Type__c</fullName>
    <description>|Advendio. GL_Code</description>
    <label>ALM Revenue Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>