agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/ALMSellerCountry__c.field-meta.xml
<CustomField>
    <fullName>ALMSellerCountry__c</fullName>
    <description>Displays the Country of the legal entity or the Salesforce Org.|Advendio. MediaCampaign</description>
    <label>ALM Seller Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>