agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/ALMSpecial_Invoice_Handling__c.field-meta.xml
<CustomField>
    <fullName>ALMSpecial_Invoice_Handling__c</fullName>
    <defaultValue>false</defaultValue>
    <description>|Advendio. MediaCampaign</description>
    <inlineHelpText>Used for revenue recognition</inlineHelpText>
    <label>ALM Special Invoice Handling</label>
    <type>Checkbox</type>
</CustomField>