agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/ALMStatus__c.field-meta.xml
<CustomField>
    <fullName>ALMStatus__c</fullName>
    <description>|Advendio. Invoice</description>
    <label>ALM Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>