agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/ALMTaxableAmountTotal__c.field-meta.xml
<CustomField>
    <fullName>ALMTaxableAmountTotal__c</fullName>
    <description>This formula adds up the total amount of all items of type 1, type 2, type 3 and type 4, depending on the taxable type you have defined. The Standard is N2.|Advendio. MediaCampaign</description>
    <label>ALM Taxable Amount (VAT Total)</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>