agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/ALMTaxableAmountType__c.field-meta.xml
<CustomField>
    <fullName>ALMTaxableAmountType__c</fullName>
    <description>Please choose which Amount field you like to calculate your taxes on. The standard uses N2.|Advendio. MediaCampaign</description>
    <label>ALM Taxable Amount Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>