agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/ALMTaxableAmountVatType2__c.field-meta.xml
<CustomField>
    <fullName>ALMTaxableAmountVatType2__c</fullName>
    <description>This field gets calculated by an APEX script and displays the total amount of all items of type 2 depending on the taxable type you have defined. The Standard is N2.|Advendio. MediaCampaign</description>
    <label>ALM Taxable Amount (VAT Type 2)</label>
    <precision>10</precision>
    <scale>9</scale>
    <type>Currency</type>
</CustomField>