agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/ALMTotal_of_Debits__c.field-meta.xml
<CustomField>
    <fullName>ALMTotal_of_Debits__c</fullName>
    <description>used in a trigger to sum up all of the debits|Advendio. Pre_Payment</description>
    <label>ALM Married Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>