agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/ALMTotal_Tax__c.field-meta.xml
<CustomField>
    <fullName>ALMTotal_Tax__c</fullName>
    <description>|Advendio. MediaCampaign</description>
    <label>ALM Total Tax</label>
    <length>255</length>
    <type>Text</type>
</CustomField>