agent-grounding/prod-opportunity-stages/objects/Opportunity/fields/ALMTotalDiscountAbs__c.field-meta.xml
<CustomField>
    <fullName>ALMTotalDiscountAbs__c</fullName>
    <description>|Advendio. MediaCampaign</description>
    <label>ALM Total Discount Abs</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>